--- a/app/views/shared/_main_nav.html.haml
+++ b/app/views/shared/_main_nav.html.haml
@@ -1,4 +1,4 @@
-%nav.navbar.navbar-default{role: "navigation"}
+%nav.navbar.navbar-inverse{role: "navigation"}
   .container-fluid
     .navbar-header
       %button.navbar-toggle{:type => "button", "data-toggle" => "collapse", "data-target" => "#bs-example-navbar-collapse-1"}
@@ -11,7 +11,7 @@
     %ul.nav.navbar-nav
       %li.pull-left
         %a.navbar-brand{href: "/"}
-          %img{src: "/img/logo-w.png", height: "40px"}
+          %img{src: "/img/logo-d.png", height: "40px"}
 
       %li{class: active_tab("members")}
         - if @space
