--- a/app/views/invoices/show.html.haml
+++ b/app/views/invoices/show.html.haml
@@ -17,29 +17,32 @@
       .col-md-12.action-bar
         .row
           .col-md-6
-            %a.btn.btn-invoice-action.btn-xs.vertical-center 
-              Send Invoice
-            %a.btn.btn-invoice-action.btn-xs.vertical-center 
-              Edit Invoice
-            .btn-group
-              %a.btn.btn-invoice-action.btn-xs.vertical-center.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :type => "button"}
-                More Actions
-                %span.caret
-              %ul.dropdown-menu{:role => "menu"}
-                %li
-                  %a{href: "#"} Add Credit Note
-                %li
-                  %a{href: "#"} Delete Invoice
+            - if @invoice.status == "open" 
+              = link_to "Send Invoice", deliver_space_member_invoice_path(@space, @member, @invoice), method: "post", class: "btn btn-invoice-action btn-xs vertical-center "
+              = link_to "Edit Invoice", edit_space_member_invoice_path(@space, @member, @invoice), class: "btn btn-invoice-action btn-xs vertical-center"  
+              .btn-group
+                %a.btn.btn-invoice-action.btn-xs.vertical-center.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :type => "button"}
+                  More Actions
+                  %span.caret
+                %ul.dropdown-menu{:role => "menu"}
+                  %li
+                    = link_to "Add Credit Note", new_space_member_credit_note_path(@space, @member, invoice_id: @invoice.id), class: ""  
+                  %li
+                    = link_to "Delete Invoice", space_member_invoice_path(@space, @member, @invoice), class: "", method: "delete", data: { confirm: 'Are you sure?' }              
+            - else 
+              - if !@invoice.paid? 
+                = link_to "Add Credit Note", new_space_member_credit_note_path(@space, @member, invoice_id: @invoice.id), class: "btn btn-invoice-action btn-xs vertical-center"  
           .col-md-6.text-right
             %p.balance.verticle-middle
               Balance:
               %span{:style => "margin-left:4px; font-weight:600;"} 
-                #{@invoice.balance_formatted} #{@member.location.currency}
-            %a.btn.btn-success.btn-xs.vertical-center Record Payment
+                #{@invoice.balance_formatted} #{@member.location.currency}  
+            - if !@invoice.paid? 
+              = link_to "Record Payment", new_space_member_payment_path(@space, @member, invoice_id: @invoice.id), class: "btn btn-success btn-xs vertical-center" 
       .box.box-body
         .row
           .col-md-6
-            %img{:src => "img/space-logo.png", :width => "160px;"}
+            -#%img{:src => "/img/space-logo.png", :width => "160px;"}
           .col-md-6.text-right
             %h2{:style => "margin-top: 0px;"} INVOICE
         .row
