--- a/app/views/shared/_main_nav.html.haml
+++ b/app/views/shared/_main_nav.html.haml
@@ -16,22 +16,22 @@
       %li{class: active_tab(["members","invoices", "payments", "credit_notes"])}
         - if @space
           %a{ href: space_members_path(@space)}
-            %span.glyphicon.glyphicon-user{ "aria-hidden" => "true"}
+            = evil_icon 'ei-user', size: :s
             Members
       %li{class: active_tab("activities")}
         - if @space
           %a{ href: space_activities_path(@space)}
-            %span.glyphicon.glyphicon-flash{ "aria-hidden" => "true"}
+            = evil_icon 'ei-bell', size: :s
             Activity
       %li{class: active_tab("insights")}
         - if @space
           %a{ href: space_insights_path(@space)}
-            %span.glyphicon.glyphicon-stats{ "aria-hidden" => "true"}
+            = evil_icon 'ei-chart', size: :s
             Insights
       %li{class: active_tab(["spaces", "locations", "admins", "resources", "plans", "integrations", "stripes"])}
         - if @space
           %a{ href: edit_space_path(@space)}
-            %span.glyphicon.glyphicon-cog{ "aria-hidden" => "true"}
+            = evil_icon 'ei-gear', size: :s
             Manage
 
       %li.dropdown.pull-right
